RESOLVED FIXED177731
Pasteboard shouldn't add "Files" as a type
https://bugs.webkit.org/show_bug.cgi?id=177731
Summary Pasteboard shouldn't add "Files" as a type
Ryosuke Niwa
Reported 2017-10-01 19:35:07 PDT
Right now, Pasteboard::typesSafeForDOMToReadAndWrite() and typesForLegacyUnsafeBindings() adds "Files" as a MIME type when there is a file-like object but this is a quirk only needed for DataTransfer DOM API. We should do this work in DataTransfer.cpp instead of having each platform's Pasteboard implement this DOM API quirk.
Attachments
Cleanup (6.35 KB, patch)
2017-10-01 19:40 PDT, Ryosuke Niwa
no flags
Updated change log (6.55 KB, patch)
2017-10-01 19:44 PDT, Ryosuke Niwa
no flags
Fixed Mac builds (9.10 KB, patch)
2017-10-01 19:50 PDT, Ryosuke Niwa
no flags
Updated for trunk (8.39 KB, patch)
2017-10-01 19:58 PDT, Ryosuke Niwa
no flags
Patch for landing (8.39 KB, patch)
2017-10-01 20:03 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-10-01 19:40:14 PDT
Ryosuke Niwa
Comment 2 2017-10-01 19:44:17 PDT
Created attachment 322346 [details] Updated change log
Ryosuke Niwa
Comment 3 2017-10-01 19:50:30 PDT
Created attachment 322347 [details] Fixed Mac builds
Ryosuke Niwa
Comment 4 2017-10-01 19:58:15 PDT
Created attachment 322348 [details] Updated for trunk
Wenson Hsieh
Comment 5 2017-10-01 20:00:23 PDT
Comment on attachment 322348 [details] Updated for trunk View in context: https://bugs.webkit.org/attachment.cgi?id=322348&action=review > Source/WebCore/platform/win/PasteboardWin.cpp:234 > // URL and Text are provided for compatibility with IE's model Should we update this comment here as well, now that we're writing the normalized types rather than the legacy "URL" and "Text" types?
Ryosuke Niwa
Comment 6 2017-10-01 20:02:10 PDT
(In reply to Wenson Hsieh from comment #5) > Comment on attachment 322348 [details] > Updated for trunk > > View in context: > https://bugs.webkit.org/attachment.cgi?id=322348&action=review > > > Source/WebCore/platform/win/PasteboardWin.cpp:234 > > // URL and Text are provided for compatibility with IE's model > > Should we update this comment here as well, now that we're writing the > normalized types rather than the legacy "URL" and "Text" types? Oops, removed.
Ryosuke Niwa
Comment 7 2017-10-01 20:03:27 PDT
Created attachment 322349 [details] Patch for landing
Ryosuke Niwa
Comment 8 2017-10-01 20:04:03 PDT
Comment on attachment 322349 [details] Patch for landing Wait for EWS.
Ryosuke Niwa
Comment 9 2017-10-02 01:55:13 PDT
Radar WebKit Bug Importer
Comment 10 2017-10-02 01:56:33 PDT
Note You need to log in before you can comment on or make changes to this bug.